# slang

./: Cargo.toml
.changeset/: forty-students-remember.md
crates/codegen/grammar/src/: dsl.rs  grammar.rs
crates/codegen/nanopass/: Cargo.toml
crates/codegen/nanopass/src/: dsl.rs  lib.rs  rust_generator.rs  type_model.rs
crates/codegen/parser/generator/src/: rust_generator.rs
crates/codegen/parser/runtime/src/napi_interface/: query.rs
crates/codegen/parser/runtime/src/query/: mod.rs
crates/codegen/runtime/cargo/: Cargo.toml  build.rs
crates/codegen/runtime/cargo/src/runtime/: lexer.rs  mod.rs
crates/codegen/runtime/cargo/src/runtime/wit/: cst.rs  cst.wit.jinja2  cursor.rs  diagnostic.rs  diagnostic.wit.jinja2  glue.rs  language.rs  (+10 more)
crates/codegen/runtime/generator/src/: lib.rs
crates/codegen/runtime/node_addon/: Cargo.toml
crates/infra/cli/src/commands/lint/: mod.rs
crates/infra/cli/src/commands/run/: mod.rs
crates/infra/utils/src/codegen/: formatting.rs  read_write.rs  tera.rs
crates/infra/utils/src/paths/: extensions.rs
crates/metaslang/cst/src/: cursor.rs
crates/solidity/inputs/language/: Cargo.toml
crates/solidity/inputs/language/src/: dsl.rs  lib.rs
crates/solidity/outputs/cargo/slang_solidity/: Cargo.toml  build.rs
crates/solidity/outputs/cargo/slang_solidity/src/: main.rs
crates/solidity/outputs/cargo/slang_solidity_node_addon/: Cargo.toml
crates/testlang/outputs/cargo/slang_testlang/: Cargo.toml  build.rs
crates/testlang/outputs/cargo/slang_testlang_node_addon/: Cargo.toml
documentation/public/internals/: development.md
(+9 files in other folders)
