[package]
name = "codegen_nanopass"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
infra_utils = { workspace = true }
lazy_static = "1.4.0"
proc-macro2 = { workspace = true }
quote = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
